Finished intro to ccs homework

--- a/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghostbusters fan page</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="fakeForm" href="css/Fakeform.html"/>
 </head>
 
 <body>
-    <h1>Ghostbusters Fan Page</h1>
+    <header>
+    <h1> Ghostbusters Fan Page</h1>
     <p>"I Ain't Afraid of No Ghost"</p>
+    <img src="https://seeklogo.com/images/G/Ghostbusters-logo-F57309605A-seeklogo.com.png"/>
+</header>
+
+<main>
+<section>
+    <h2>The Ghostbusters</h2>
+  
+    <table>
+        <thead>
+            <tr>
+                <th>Character Name</th>
+                <th>Played By</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Peter Venkman</th>
+                <td>Bill Murray</td>
+            </tr>
+            <tr>
+                <td>Egon Spengler</th>
+                <td>Harold Ramis</td>
+            </tr>
+            <tr>
+                <td>Ray Stantz</th>
+                <td>Dan Aykroyd</td>
+            </tr>
+            <tr>
+                <td>Winston Zeddemore</th>
+                <td>Ernie Hudson</td>
+            </tr>
+           
+        </tbody>
+    </table>
+</section>
+
+<section>
+<h2>Favorite Quotes</h2>
+<h3>Peter Venkman: "Human sacrifice, dogs and cats living together – mass hysteria."</h3>
+<h3>Egon Spengler: "Try to image all life as you know it stopping instantaneously and every molecule in your body exploding at the speed of light."</h3>
+<h3>Ray Stantz: " It's the Stay Puft Marshmallow man."</h3>
+<h3>Wintston Zeddemore: "Ray, when someone asks you if you're a god, you say 'YES'!"</h3>
+
+</section>
+    <section>
+        <h2>Links</h2>
+        <ul>
+       <li> <a href="https://en.wikipedia.org/wiki/Ghostbusters">Ghostbusters Wikipedia</a></li>
+       <li>  <a href="http://www.ghostbustershq.net/">Ghostbusters Headquarters Web Page</a></li>
+       <li>  <a href="https://www.imdb.com/title/tt0087332/">Ghostbusters IMDB</a></li>
+    </ul>
+    </section>
+
+</main>
+
 </body>
 
 </html>
